deployments/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connect-hub
  labels:
    app: connect-hub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: connect-hub
  template:
    metadata:
      labels:
        app: connect-hub
    spec:
      containers:
      - name: connect-hub
        image: <your-docker-image>
        ports:
        - containerPort: 8080
