deployments/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connect-hub
spec:
  selector:
    app: connect-hub
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
