deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connect-hub
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: skylabworld.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: connect-hub
            port:
              number: 80
